# Quantization-Aware-Pre-Training

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
configs/: dev_config.yaml  prod_config.yaml
scripts/: 01_create_environment.bash  01_create_environment.srun  02_download_models.bash  03_download_data.bash  04_run_pretokenization.bash  04_run_pretokenization.sbatch  05_launch_pretraining.bash  05_launch_pretraining_array.sbatch  06_launch_finetuning_and_evaluation_array.sbtach  06_launch_finetuning_and_evaluation_grid.bash  07_download_results.bash  08_generate_reports.bash
scripts/utils/: _setup_env.sh  clean_source_text.py  make_dataset.py
src/config/: core.py
src/data_processing/: nachos_dataset.py
src/metrics/: base_computer.py  computers.py
src/modeling/: factory.py  quantization.py
src/orchestrators/: download_data.py  download_models.py  run_alpha_grouped_task_pipeline.py  run_pretokenization.py  run_pretraining_array.py  run_pretraining_grid.py  run_reporting_grid.py  run_task_pipeline_grid.py
src/reporting/: count_pretraining_tokens.py  data_collector.py  generate_bitops_report.py  table_generator.py
src/tasks/: __init__.py  base.py  factory.py  francophone.py
src/tasks/drbenchmark/: __init__.py  ner.py  pos.py
src/utils/: determinism.py  misc.py  path_manager.py  post_training_helpers.py  statistics.py  system.py  task_utils.py  tokenizer_loader.py  trainer_factory.py  training_args_factory.py
src/workers/: evaluator.py  finetuner.py  hf_dataset_downloader.py  hf_model_downloader.py  pipeliner.py  pretokenizor.py  pretrainer.py  reporter.py
